src/test/deca/context/invalid/provided/DefinedField.deca
// DESCRIPTION: use the same name for two attribut 
// RESULTAT: 

class A {
	 int a ;
         float a ;

}
